# yage

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
code/: CMakeLists.txt  README.md  main.cpp
code/ogl_lib/: CMakeLists.txt  demo1.cpp
code/ogl_lib/embedfile/: embedfile.c
code/ogl_lib/glad/include/glad/: glad.h
code/ogl_lib/shaderpipeline/: IShaderPipeline.hpp  ShaderPipelineTypes.hpp  SimpleShaderPipeline.cpp  SimpleShaderPipeline.hpp
code/ogl_lib/shaders/: frag.glsl
code/ogl_lib/src/: IVao.hpp  Vao.cpp  Vao.hpp
code/yagEngine/: CMakeLists.txt  demo1.cpp  demo1.hpp
code/yagEngine/shaders/: vert.glsl
code/yagEngine/src/: IRenderable.hpp  Rectangle.cpp  Rectangle.hpp  RenderObject.cpp  RenderObject.hpp  SimpleRenderer.hpp
code/yagEngine/src/gl_class/: IShaderPipeline.hpp  IVao.hpp  ShaderPipelineTypes.hpp  SimpleShaderPipeline.cpp  SimpleShaderPipeline.hpp  Vao.hpp
doc/: Doxyfile
examples/asteroids/: CMakeLists.txt  main.cpp
examples/demo1/: CMakeLists.txt  main.cpp
notes/: README.md  first_ideation.puml
src/: CMakeLists.txt  main.cpp
src/3rdp/stb_image/: CMakeLists.txt
src/src/: Rectangle.cpp  SimpleRenderer.cpp  Window.hpp
src/src/fs/assets/: AssetStore.cpp  Font.cpp
src/src/gl_class/: GLShaderPipeline.hpp
src/yagEngine/: CMakeLists.txt  demo1.cpp  demo1.hpp
src/yagEngine/ext/glad/src/: glad.c
src/yagEngine/ext/stb_image/: CMakeLists.txt
src/yagEngine/shaders/: frag.glsl  vert.glsl
src/yagEngine/src/: Rectangle.cpp  Rectangle.hpp  RenderObject.cpp  RenderObject.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp  Window.cpp
src/yagEngine/src/fs/: AssetBundle.cpp  AssetBundle.hpp  AssetCommons.hpp
src/yagEngine/src/fs/assets/: AssetBundle.cpp  AssetBundle.hpp  AssetStore.cpp  AssetStore.hpp  Font.hpp  Image2D.cpp  Image2D.hpp
src/yagEngine/src/gl_class/: GLBindings.cpp  GLBindings.hpp  GLScene.cpp  GLScene.hpp  GLShaderPipeline.hpp  GLTexture.cpp  GLTexture.hpp  GLViewport.hpp  IShaderPipeline.hpp  ShaderPipelineTypes.hpp  SimpleShaderPipeline.cpp  SimpleShaderPipeline.hpp  Vao.cpp  Vao.hpp
src/yagEngine/utils/embedfile/: embedfile.c
yage/: CMakeLists.txt
yage/res/yage/meshes/: square.mesh
yage/shaders/: vert.glsl
yage/src/: DefaultRenderer.cpp  DefaultRenderer.hpp  IRenderable.hpp  RenderObject.hpp  RenderTarget.cpp  RenderTarget.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp
yage/src/fs/assets/: AssetStore.cpp  AssetStore.hpp  Mesh2D.cpp  Mesh2D.hpp
yage/src/gl_class/: GLShaderPipeline.cpp  GLTexture.cpp  GLViewport.cpp  IVao.hpp  ShaderPipelineTypes.hpp  Vao.cpp
